# compiler

./: .gitignore  .gitmodules  CMakeLists.txt  SIMPLIFIED_CODEGEN_WITH_TYPECHECKER.md  build_llvm.bat  compile_and_run_ast.bat  format.ps1  start.bat  todo
jsons/: 10_pointers.json  6_if_else.json  9_structs.json
src/: CodeGen.cpp  CodeGen.h  Context.h  Utils.cpp  Utils.h  main.cpp
src/AST/: ProgramNode.h  forwardDecl.h  fromJSON.cpp  fromJSON.h  includeNodes.h
src/AST/declaration/: DeclarationNode.h  FunctionDeclNode.h  FunctionPtrDeclNode.h  ParameterDeclNode.h  StructDeclNode.h  VariableDeclNode.h
src/AST/expression/: BinaryExprNode.h  CallExprNode.h  CastExprNode.h  CommaExprNode.h  ExpressionNode.h  IdentifierExprNode.h  IndexExprNode.h  LiteralExprNode.h  MemberExprNode.h  UnaryExprNode.h
src/AST/statement/: BlockStatementNode.h  BreakStatementNode.h  ContinueStatementNode.h  DoWhileStatementNode.h  ExpressionStatementNode.h  ForStatementNode.h  IfStatementNode.h  ReturnStatementNode.h  StatementNode.h  SwitchStatementNode.h  WhileStatementNode.h
src/AST/type/: NamedTypeNode.h  PointerTypeNode.h  PrimitiveTypeNode.h  TypeNode.h
test/: runtime.c
